fixed some general css colors that were not showing properly in values.css, style_faq and navbar.css

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -27,6 +27,7 @@ nav ul li {
 
 nav ul li a {
     color: var(--dark-blue);
+    text-transform: none;
 }
 
 nav img {
